connected the civic api

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
   </head>
   <body>
+    <script src="https://www.googleapis.com/civicinfo/v2/representatives?key=AIzaSyDJCpCj0C6xd_ucZHhLQ7_W6nJNGDi5Sjc&address=1263%20Pacific%20Ave.%20Kansas%20City%20KS"></script>
     <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
