--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     ></script>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand">Navbar</a>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
+      
+    </header>  
     <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
