Created second HTML file for congressman information

--- a/result.html
+++ b/result.html
@@ -17,6 +17,21 @@
     ></script>
   </head>
   <body>
+    <nav class=" navbar navbar-expand-lg navbar-light bg-light fixed-top py-lg-0 " id="nav-bar">
+        <a class="navbar-brand" href="#">Who's My Congressman?</a>
+    </nav>
+    <div class="card" style="width: 18rem;" id="congressman-card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title" id="congressman-name">Something</h5>
+        <p class="card-text" id="brief-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <ul class="list-group list-group-flush" id="congressman-info">
+        <li class="list-group-item" id="party">Party</li>
+        <li class="list-group-item" id="state">State</li>
+        <li class="list-group-item" id="birthday">Birthday</li>
+      </ul>
+    </div>
     <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
