--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" src="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
@@ -17,14 +17,20 @@
     ></script>
   </head>
   <body>
-    <nav class=" navbar navbar-expand-lg navbar-light bg-light fixed-top py-lg-0 " id="nav-bar">
-        <a class="navbar-brand" href="#">Who's My Congressman?</a>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-lg-0"
+      id="nav-bar"
+    >
+      <a class="navbar-brand" href="#">Who's My Congressman?</a>
     </nav>
-    <div class="card" style="width: 18rem;" id="congressman-card">
-      <img src="..." class="card-img-top" alt="...">
+    <div class="card" style="width: 18rem" id="congressman-card">
+      <img src="..." class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title" id="congressman-name">Something</h5>
-        <p class="card-text" id="brief-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text" id="brief-summary">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
       </div>
       <ul class="list-group list-group-flush" id="congressman-info">
         <li class="list-group-item" id="party">Party</li>
@@ -33,5 +39,7 @@
       </ul>
     </div>
     <script src="./assets/js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://www.googleapis.com/civicinfo/v2/representatives?key=AIzaSyDJCpCj0C6xd_ucZHhLQ7_W6nJNGDi5Sjc&address=1263%20Pacific%20Ave.%20Kansas%20City%20KS"></script>
   </body>
 </html>
