--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-<<<<<<< HEAD
-    <link rel="stylesheet" href="./assets/css/styles.css"/>
-=======
     <link rel="stylesheet" href="./assets/css/styles.css" />
->>>>>>> 9512305 (populate politicians name)
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <header>
@@ -28,19 +23,21 @@
       </nav>
     </header>
 
-    <section class="hero">
-
-      <div class="hero-content">
-        
-        <nav class="navbar bg-light">
-          <div class="container-fluid">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+    <div class="hero-image">
+      <div class="search-bar">
+        <nav class="navbar navbar-light bg-light">
+          <form class="form-inline">
+            <input
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+              Search
+            </button>
+          </form>
         </nav>
-      
       </div>
     </div>
 
