--- a/result.html
+++ b/result.html
@@ -16,26 +16,36 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body style="height:flex;">
-    <nav class=" navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-lg-0 " id="nav-bar">
-        <a class="navbar-brand" href="./index.html">Who's My Congressman?</a>
+  <body style="height: flex">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-lg-0"
+      id="nav-bar"
+    >
+      <a class="navbar-brand" href="./index.html">Who's My Congressman?</a>
     </nav>
-    <div class="card" style="width:flex; height:flex;" id="congressman-card">
-      <img src="./Portrait_Placeholder.png" class="img" alt="picture of congressman">
+    <div class="card" style="width: flex; height: flex" id="congressman-card">
+      <img
+        src="./Portrait_Placeholder.png"
+        class="img"
+        alt="picture of congressman"
+      />
       <div class="card-body">
         <h5 class="card-title" id="congressman-name">Name</h5>
-        <p class="card-text" id="brief-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text" id="brief-summary">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
       </div>
       <ul class="list-group list-group-flush" id="congressman-info">
-        <li class="list-group-item" id="party"> <label>Party:</label></li>
-        <li class="list-group-item" id="state"> <label>State:</label></li>
-        <li class="list-group-item" id="birthday"> <label>Date of Birth:</label></li>
+        <li class="list-group-item" id="party"><label>Party:&nbsp</label></li>
+        <li class="list-group-item" id="state"><label>State:&nbsp</label></li>
+        <li class="list-group-item" id="birthday">
+          <label>Date of Birth:</label>
+        </li>
       </ul>
     </div>
     <script src="./assets/js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://www.googleapis.com/civicinfo/v2/representatives?key=AIzaSyDJCpCj0C6xd_ucZHhLQ7_W6nJNGDi5Sjc&address=1263%20Pacific%20Ave.%20Kansas%20City%20KS"></script>
   </body>
-
 </html>
-
