function populates cards

--- a/result.html
+++ b/result.html
@@ -28,52 +28,52 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top"
-            alt="Skyscrapers" />
+          <p class="card-img-top"
+            alt="No Image Available" id="img2"></p>
           <div class="card-body">
-            <h5 class="card-title">Congressman name</h5>
+            <h5 class="card-title" id="name2">Congressman name</h5>
             <ul class="list-group list-group-flush" id="congressman-info">
-              <li class="list-group-item" id="party"> <label>Party:</label></li>
-              <li class="list-group-item" id="state"> <label>State:</label></li>
-              <li class="list-group-item" id="birthday"> <label>Date of Birth:</label></li>
+              <li class="list-group-item" id="party2"> <label>Party:&nbsp</label></li>
+              <li class="list-group-item" id="office-sen"> <label>Office: U.S. Senator</label></li>
+              <li class="list-group-item" id="contact2"> <label>Contact Me:&nbsp</label></li>
             </ul>
           </div>
           <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
+            <small class="text-muted" id="link2">Learn More:&nbsp</small>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top"
-            alt="Los Angeles Skyscrapers" />
+          <p class="card-img-top"
+            alt="No Image Available" id="img3"></p>
           <div class="card-body">
-            <h5 class="card-title">Congressman name</h5>
+            <h5 class="card-title" id="name3">Congressman name</h5>
             <ul class="list-group list-group-flush" id="congressman-info">
-              <li class="list-group-item" id="party"> <label>Party:</label></li>
-              <li class="list-group-item" id="state"> <label>State:</label></li>
-              <li class="list-group-item" id="birthday"> <label>Date of Birth:</label></li>
+              <li class="list-group-item" id="party3"> <label>Party:&nbsp</label></li>
+              <li class="list-group-item" id="office-sen"> <label>Office: U.S. Senator</label></li>
+              <li class="list-group-item" id="contact3"> <label>Contact Me:&nbsp</label></li>
             </ul>
           </div>
           <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
+            <small class="text-muted" id="link3">Learn More:&nbsp</small>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
-            alt="Palm Springs Road" />
+          <p class="card-img-top"
+            alt="No Image Available" id="img4"></p>
           <div class="card-body">
-            <h5 class="card-title">Congressman name</h5>
+            <h5 class="card-title" id="name4">Congressman name</h5>
             <ul class="list-group list-group-flush" id="congressman-info">
-              <li class="list-group-item" id="party"> <label>Party:</label></li>
-              <li class="list-group-item" id="state"> <label>State:</label></li>
-              <li class="list-group-item" id="birthday"> <label>Date of Birth:</label></li>
+              <li class="list-group-item" id="party4"> <label>Party:&nbsp</label></li>
+              <li class="list-group-item" id="office-rep"> <label>Office: U.S. Representative</label></li>
+              <li class="list-group-item" id="contact4"> <label>Contact Me:&nbsp</label></li>
             </ul>
           </div>
           <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
+            <small class="text-muted" id="link4">Learn More:&nbsp</small>
           </div>
         </div>
       </div>
