--- a/result.html
+++ b/result.html
@@ -25,7 +25,7 @@
     </header>
     
     
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="cards">
       <div class="col">
         <div class="card h-100">
           <p class="card-img-top"
