cleaned up the css and removed js redundencies

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <body>
     <header>
       <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Who's My Congressman?</a>
+        <a class="navbar-brand" href="#" id="title">Who's My Congressman?</a>
       </nav>
     </header>
-
     <section class="hero">
+      <h1 id="info">Find Out Who Represents You</h1>
       <div class="hero-content">
         <nav class="navbar bg-light" id="search-form">
           <div class="container-fluid">
