--- a/result.html
+++ b/result.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav class=" navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-lg-0 " id="nav-bar">
-          <a class="navbar-brand" href="./index.html">Who's My Congressman?</a>
+          <a class="navbar-brand" href="./index.html" id="title">Who's My Congressman?</a>
       </nav>
     </header>
     
